--- a/chat_socketio/package.json
+++ b/chat_socketio/package.json
@@ -2,5 +2,11 @@
     "name": "zilch-chat",
     "version": "0.0.1",
     "description": "zilch-game-chat",
-    "dependencies": {},
+    "dependencies": {
+        "express": "^4.17.1",
+        "nodemon": "^2.0.7"
+    },
+    "scripts": {
+        "start": "node index.js"
+    }
 }
