--- a/zilch_server/package.json
+++ b/zilch_server/package.json
@@ -2,7 +2,7 @@
   "name": "zilch_server",
   "version": "1.0.0",
   "description": "zilch server creation",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "socketio": "^1.0.0"
   }
 }
