--- a/zilch_server/package.json
+++ b/zilch_server/package.json
@@ -4,6 +4,7 @@
   "description": "zilch server creation",
   "main": "server.js",
   "scripts": {
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Maetran",
